<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    android:orientation="vertical" >
    
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" 
    >
	     <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="44dp" 
	        android:background="@color/nav_bg"
	        >
	        
	         <ImageButton
	               android:id="@+id/btn_back"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_centerVertical="true"
	               android:background="@drawable/icon_back"
	                />
	
	           <TextView
	               android:id="@+id/textTitle"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_centerHorizontal="true"
	               android:layout_centerVertical="true"
	               android:text="@string/xinxi"
	               android:textColor="@color/white"
	               android:textSize="@dimen/nav_title_fontsize" />

	           <ImageButton
	               android:id="@+id/btn_save"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_alignParentRight="true"
	               android:layout_alignTop="@+id/btn_back"
	               android:background="@drawable/icon_back" />
	           
	  	  </RelativeLayout>
	    
	      <ImageView
	        android:id="@+id/imageView"
	        android:layout_width="160dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:src="@drawable/ic_launcher" />
	    
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:text="@string/name" />
	
	        <TextView
	            android:id="@+id/uNameId"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10" >
	        </TextView>
	      </LinearLayout>
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:text="@string/sex" />
	        
	        <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
		        <RadioButton
		            android:id="@+id/male"
		            android:checked="true"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/man" />
		
		        <RadioButton
		            android:id="@+id/female"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/woman" />
	   		 </RadioGroup>
	        
	      </LinearLayout>
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	      </LinearLayout>
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:text="@string/birthday" />
	        
	        <EditText
	        android:id="@+id/inputDate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:focusable="false"
	        android:inputType="date" />
	      </LinearLayout>
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:text="@string/phone" />
	
	        <EditText
	            android:id="@+id/uPhoneId"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="phone" 
	            android:ems="10" >
	        </EditText>
	      </LinearLayout>
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	
	        <TextView
	            android:id="@+id/textView8"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:text="@string/email" />
	
	        <EditText
	            android:id="@+id/uMailId"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="text" 
	            android:ems="10" >
	        </EditText>
	      </LinearLayout>
	    
	      <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp" 
	     	android:paddingLeft="10dp"
			android:paddingRight="10dp"
	        android:background="@color/white" 
	        >
	
	        <TextView
	            android:id="@+id/textView9"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:text="@string/address" />
	
	        <EditText
	            android:id="@+id/uAdressId"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="text" 
	            android:ems="10" >
	        </EditText>
	     </LinearLayout>
	  </LinearLayout>

</LinearLayout>
