<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" 
     android:background="@color/white1"
    >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" 
    >

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp" 
        android:background="@color/nav_bg"
        >

           <TextView
               android:id="@+id/textTitle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true"
               android:text="@string/register"
               android:textColor="@color/white"
               android:textSize="@dimen/nav_title_fontsize" />
           
           <ImageButton
               android:id="@+id/btn_back"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:layout_marginLeft="5dp"
               android:background="@drawable/icon_back"
                />
           
  	 </RelativeLayout>
            
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/login_username" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:ems="10" >
            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp" 
     	android:paddingLeft="10dp"
		android:paddingRight="10dp"
        android:background="@color/white" 
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" 
            android:ems="10" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp" 
     	android:paddingLeft="10dp"
		android:paddingRight="10dp"
        android:background="@color/white" 
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/login_qrpassword" />

        <EditText
            android:id="@+id/editqrPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" 
            android:ems="10" >
        </EditText>
    </LinearLayout>
    
    <Button
        android:id="@+id/btnRegistId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register" />
 
</LinearLayout>

<RelativeLayout
    android:id="@+id/progressBarView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/transparent"
    android:visibility="gone" 
    >

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
</RelativeLayout>
