<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" 
     android:background="@color/white1"
    >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" 
    >

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp" 
        android:background="@color/nav_bg"
        >

           <TextView
               android:id="@+id/textTitle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true"
               android:text="@string/usercenter"
               android:textColor="@color/white"
               android:textSize="@dimen/nav_title_fontsize" />
           
  	 </RelativeLayout>
    
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >
        
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="0dp" 
		            android:background="@drawable/bt_menu_4_select" />

                <TextView
                    android:id="@+id/userinfotb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/userinfo"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_right" />
    </LinearLayout>
            
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >
                
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
					android:layout_marginTop="0dp" 
		            android:background="@drawable/icon_back" />

                <TextView
                    android:id="@+id/userddtb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/userdd"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_right" />
    </LinearLayout>
            
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >
		                
		         <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="0dp" 
		            android:background="@drawable/icon_back" />

                <TextView
                    android:id="@+id/usersctb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/usersc"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_right" />
    </LinearLayout>

</LinearLayout>
</RelativeLayout>
